# ds-infected-cell-summer

./: Compiled_Data_Frames.ipynb  Compiled_df_CRISPR screens.ipynb  DENV_HCV_graphs.py  README.md  SARS_graphs.py  comparisons.py  compiled_outputs
infected-cell-dash/: README.md
infected-cell-dash-compare/: pyproject.toml
infected-cell-dash-compare/infected_cell_dash/: app.py
infected-cell-dash/infected_cell_dash/: app.py
infected-cell-dash_template/infected_cell_dash/: app.py
infected-cell-portal/: README.md  package-lock.json  package.json
infected-cell-portal/backend/: package-lock.json  package.json
infected-cell-portal/backend/views/: layout.pug
infected-cell-portal/frontend/: .gitignore  package.json
infected-cell-portal/src/: index.jsx
notebooks_elikond/: comparisons.py  compiled_outputs.ipynb
notebooks_jl/: README.md  compiled_df_CRISPR_screens.ipynb  create_heatmap.ipynb  nf_pipeline_sanity_check.ipynb  summer_notes.ipynb
test_data/: HAV_compare.txt  Wang_229E_OC43.txt
workflows/: Makefile  nextflow.config
workflows/makefile_071621/: .nextflow.log.2  .nextflow.log.3  .nextflow.log.8  .nextflow.log.9  makefile  makefile~
workflows/makefile_072321/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  makefile  makefile~
workflows/makefile_120821/: .nextflow.log.1  Makefile
workflows/makefile_combinedAB/: .nextflow.log.1  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7
workflows/makefile_efficient/: makefile
(+88 files in other folders)
