[tool.poetry]
name = "infected-cell-dash"
version = "0.0.0"
description = "TODO"
authors = []
license = "MIT"

[tool.poetry.dependencies]
dash = "^1.21.0"
pandas = "^1.3.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
